--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
       <br/>All other outlying areas are available with a Travel Fee. $35 for 10-20 miles, $52 for 20-30 miles, $96 for 30-40 miles.<br/> (not included in total price)
       <br/>No cancellations.<br/>
       Rescheduling is subject to availability.
-      <br/>A non-refundable $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.<br/>
-      We can collect cash, check, cash app, venmo, or paypal the day of.
+      <br/>A non-refundable $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.
+      We can collect cash, check, cash app, venmo, or paypal the day of. <br?> Please review our liability release form. By making a reservation and payment, you are agreeing to the terms and conditions.
     </p>
 
     <form id="bookingForm">
