--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <br/>No cancellations.<br/>
       Rescheduling is subject to availability.
       <br/>A non-refundable $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.
-      We can collect cash, check, cash app, venmo, or paypal the day of. <br?> Please review our liability release form. By making a reservation and payment, you are agreeing to the terms and conditions.
+      We can collect cash, check, cash app, venmo, or paypal the day of. <br/> Please review our liability release form. By making a reservation and payment, you are agreeing to the terms and conditions.
     </p>
 
     <form id="bookingForm">
