--- a/index.html
+++ b/index.html
@@ -165,14 +165,30 @@
   <div class="booking-form text-center">
     <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
     <h2 class="mb-3">Slide Guys Booking</h2>
-    <p>
+
+    <p class="mb-3">
       Select a date and available units will be shown. Add items to cart. Payment link will appear when you choose "full payment" or "deposit".
       <br/>Deliveries within 10 miles of Richfield are free.
       <br/>All other outlying areas are available with a Travel Fee. $35 for 10-20 miles, $52 for 20-30 miles, $96 for 30-40 miles.<br/> (not included in total price)
       <br/>No cancellations.<br/>
       Rescheduling is subject to availability.
-      <br/>A non-refundable $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.
-      We can collect cash, check, cash app, venmo, or paypal the day of. <br/> Please review our liability release form. By making a reservation and payment, you are agreeing to the terms and conditions.
+      <br/>A non-refundable $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.<br/>
+      We can collect cash, check, cash app, venmo, or paypal the day of.
+      <br/><br/>
+      Please review our liability release form. By making a reservation and payment, you are agreeing to the terms and conditions.
+      <a
+        href="https://www.canva.com/design/DAGvLXmYrCQ/urL0oPQKv3g2IDZnXb7URw/view?utm_content=DAGvLXmYrCQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hcf7d7df185"
+        target="_blank"
+        class="btn btn-primary btn-sm ms-2"
+      >Liability Release Form</a>
+
+      <!-- ✅ "I Agree" gate -->
+      <div class="form-check mt-3 text-start">
+        <input class="form-check-input" type="checkbox" id="agreeTerms">
+        <label class="form-check-label" for="agreeTerms">
+          I have read and agree to the terms, conditions, and liability release.
+        </label>
+      </div>
     </p>
 
     <form id="bookingForm">
@@ -220,7 +236,7 @@
         </div>
       </div>
 
-      <!-- Payment amount choice (hidden PayPal stack until picked) -->
+      <!-- Payment amount choice -->
       <div class="pay-choice-wrap">
         <div class="d-flex gap-2 mt-3">
           <button type="button" id="payFullBtn" class="btn btn-outline-primary w-50">
@@ -331,7 +347,7 @@
         el.textContent = msg;
       }
 
-      // ✅ Same checks as "Reserve" (customer info + date + cart)
+      // ✅ Same checks as Reserve + "I Agree" gate
       function requireCustomerInfoAndCart() {
         const fields = [
           { id: 'name', label: 'Full Name' },
@@ -378,10 +394,17 @@
           return false;
         }
 
+        const agree = document.getElementById('agreeTerms');
+        if (agree && !agree.checked) {
+          alert('Please check "I agree" to the terms and liability release before continuing.');
+          agree.focus();
+          return false;
+        }
+
         return true;
       }
 
-      // Clear invalid state as they type
+      // Clear invalid styles as they type
       ['name','phone','email','address','city'].forEach(id => {
         const el = document.getElementById(id);
         if (el) el.addEventListener('input', () => {
@@ -402,7 +425,6 @@
         if (fullBtn) fullBtn.textContent = `Pay Full Amount ($${formatMoney(getCartTotal())})`;
         if (depBtn) depBtn.textContent = `Pay Deposit Amount ($${formatMoney(getDepositTotal())})`;
 
-        // If cart empty, reset payment UI
         if (cart.length === 0) {
           chosenPayType = null;
           chosenPayAmount = 0;
@@ -458,18 +480,9 @@
 
           btn.addEventListener('click', () => {
             const chosenDate = document.getElementById('date').value;
-            if (!chosenDate) {
-              alert('Please select a date first.');
-              return;
-            }
-            if (checking) {
-              alert('Checking availability… try again in a second.');
-              return;
-            }
-            if (bookedUnitIds.has(unitId)) {
-              alert('Sorry — this unit is already booked on this date.');
-              return;
-            }
+            if (!chosenDate) return alert('Please select a date first.');
+            if (checking) return alert('Checking availability… try again in a second.');
+            if (bookedUnitIds.has(unitId)) return alert('Sorry — this unit is already booked on this date.');
 
             unitGrid.querySelectorAll('.unit-card-btn').forEach(b => b.classList.remove('selected'));
             btn.classList.add('selected');
@@ -542,18 +555,12 @@
         const unitName = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
 
-        if (!unitName || !date) {
-          alert('Please select a unit and a date before adding to cart.');
-          return;
-        }
+        if (!unitName || !date) return alert('Please select a unit and a date before adding to cart.');
 
         await refreshAvailability(date);
 
         const unitRow = unitsCache.find(u => u.name === unitName);
-        if (!unitRow) {
-          alert('Could not find that unit. Please try again.');
-          return;
-        }
+        if (!unitRow) return alert('Could not find that unit. Please try again.');
 
         const unitId = String(unitRow.id);
 
@@ -565,10 +572,7 @@
 
         const key = cartKey(unitId, date);
         const alreadyInCart = cart.some(item => cartKey(item.unitId, item.date) === key);
-        if (alreadyInCart) {
-          alert('That unit is already in your cart for this date.');
-          return;
-        }
+        if (alreadyInCart) return alert('That unit is already in your cart for this date.');
 
         cart.push({ unitId, unitName, price: unitRow.price, date });
 
@@ -609,7 +613,6 @@
         return true;
       }
 
-      // ✅ PayPal stack: render once; createOrder uses chosenPayAmount
       function renderPayPalStackOnce() {
         const container = document.getElementById('paypalButtons');
         if (!container) return;
@@ -619,7 +622,6 @@
           return;
         }
 
-        // prevent double-render
         if (container.dataset.rendered === '1') return;
         container.dataset.rendered = '1';
 
@@ -627,8 +629,7 @@
           style: { layout: 'vertical', shape: 'rect', label: 'pay' },
 
           createOrder: async (data, actions) => {
-            if (!requireCustomerInfoAndCart()) throw new Error('Missing required fields/cart/date');
-
+            if (!requireCustomerInfoAndCart()) throw new Error('Missing required fields/cart/date/agree');
             if (!chosenPayType || !chosenPayAmount) {
               alert('Please choose Pay Full Amount or Pay Deposit Amount first.');
               throw new Error('No pay choice');
@@ -673,7 +674,6 @@
         }).render('#paypalButtons');
       }
 
-      // ✅ Choose full/deposit -> SAME checks as Reserve -> show payment stack
       document.getElementById('payFullBtn').addEventListener('click', () => {
         if (!requireCustomerInfoAndCart()) return;
 
@@ -789,8 +789,6 @@
           paid_amount,
           paypal_order_id,
           paypal_payer_email,
-
-          // backward compatibility
           unit: cart[0]?.unitName || '',
           date: cart[0]?.date || ''
         };
@@ -801,6 +799,10 @@
         document.getElementById('successMessage').style.display = 'block';
         document.getElementById('errorMessage').style.display = 'none';
         document.getElementById('bookingForm').reset();
+
+        // reset agree checkbox
+        const agree = document.getElementById('agreeTerms');
+        if (agree) agree.checked = false;
 
         clearSelectionUI();
 
@@ -813,15 +815,12 @@
         checking = false;
         renderUnits();
 
-        // reset payment state/UI (keep PayPal rendered, just hide stack)
         chosenPayType = null;
         chosenPayAmount = 0;
         finalized = false;
         setPaymentVisible(false);
         clearPayChoiceStyles();
       }
-
-      // ✅ Reserve/submit handler removed
     });
   </script>
 </body>
